[metadata]
name = laiogen_client
version = 0.1.0

[options]
packages = laiogen_client
install_requires=
    sdc @ git+https://github.com/limiteinductive/stable-diffusion-cli
    python-arango>=7.4.1
    GPUtil>=1.4.0
    returns>=0.19.0
    loguru>=0.6.0
    googletrans >= 3.1.0a0
    nanoid >=2.0.0


[options.entry_points]
console_scripts = 
    run_laiogen_client = laiogen_client.cli:app
  